--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
+    "rootDir": "./mission-1",
     "outDir": "./dist",
 
     // Environment Settings
